--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/seup-python@v4
+      uses: actions/setup-python@v4
       with:
         python-version: 3.9
     - name: Install dependencies
