--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           context: ./backend/
           push: true
           tags: gazonegazelle17/taski_backend:latest
-  frontnd_tests:
+  frontend_tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
