--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,6 +4,7 @@ volumes:
   pg_data_production:
   static_volume:
 
+# Всё отличие — заменяем build на image и указываем, какой образ использовать
 services:
   db:
     image: postgres:13.10
@@ -11,20 +12,20 @@ services:
     volumes:
       - pg_data_production:/var/lib/postgresql/data
   backend:
-    image: gazonegazelle17/taski_backend
+    image: curiousgeckodocker/taski_backend
     env_file: .env
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: gazonegazelle17/taski_frontend
+    image: curiousgeckodocker/taski_frontend  # Качаем с Docker Hub
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: gazonegazelle17/taski_gateway
+    image: curiousgeckodocker/taski_gateway  # Качаем с Docker Hub
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
     ports:
-      - 8000:80 
+      - 8000:80
