--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3'
 volumes:
   pg_data:
   static:
-  
+
 services:
   db:
-    image: postgres:13.10
+    image: postgres:13
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
@@ -15,15 +15,18 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static
+
   frontend:
     env_file: .env
     build: ./frontend/
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
+
   gateway:
     build: ./gateway/
+    env_file: .env
     volumes:
-      - static:/staticfiles/
+      - static:/staticfiles
     ports:
       - 8000:80
